# switchbot-api

./: Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  sensor.json
src/: api.py  sensor.py
src/api/: Dockerfile  api.py
src/sensor/: Dockerfile  requirements.txt  sensor.py
